<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.intel.realsense.librealsense.GLRsSurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/glSurfaceView"/>

    <TextView
        android:id="@+id/connectCameraText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/black"
        android:textSize="20dp"
        android:text="Connect a RealSense camera"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Show SDK version  -->
    <TextView
        android:id="@+id/sdk_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_version_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Start / Stop discovery buttons  -->
    <Button
        android:text="@string/start_discovery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startDiscovery"
        android:id="@+id/start_discovery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:text="@string/stop_discovery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stopDiscovery"
        android:id="@+id/stop_discovery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discovery_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discovery_status_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Connect to FLIR ONE / Emulators buttons  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <Button
            android:id="@+id/connect_flir_one"
            android:onClick="connectFlirOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_f1_text" />

        <Button
            android:id="@+id/connect_s1"
            android:onClick="connectSimulatorOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_sim1_text" />

        <Button
            android:id="@+id/connect_s2"
            android:onClick="connectSimulatorTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_sim2_text" />
    </LinearLayout>

    <Button
        android:id="@+id/disconnect_any"
        android:onClick="disconnect"
        android:text="@string/disconnect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connection_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_status_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/msx_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:minWidth="50dp"
            android:maxWidth="50dp"
            android:contentDescription="image with IR and visual data mixed"
            />

        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:minWidth="50dp"
            android:maxWidth="50dp"
            android:contentDescription="image with only visual image"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>